Upload compressed audio file

--- a/valentine.html
+++ b/valentine.html
@@ -111,7 +111,7 @@
     <div id="quote" class="hidden"></div>
   </div>
 
-  <audio id="backgroundMusic" src="A thousand years.mp3" loop></audio>
+  <audio id="backgroundMusic" src="A thousand years (1).mp3" loop></audio>
 
 
   <script>
